[package]
name = "thermostat-mqtt"
version = "0.0.0"
categories = ["embedded", "no-std"]
description = "Thermostat MQTT firmware"
license = "MIT OR Aapache-2.0"
authors = [
	"SingularitySurfer <nk@quartiq.com>",
	"Robert Jördens <rj@quartiq.de>"
]
keywords = ["thermostat", "laser", "physics"]
repository = "https://github.com/quartiq/thermostat-mqtt.git"
edition = "2018"
resolver = "2"

[badges]
maintenance = { status = "experimental" }

[package.metadata.docs.rs]
features = []
default-target = "thumbv7em-none-eabihf"

[dependencies]
panic-halt = "0.2"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_info"] }
bare-metal = "1"
cortex-m = "0.7"
cortex-m-rt = { version = "0.6", features = ["device"] }
stm32f4xx-hal = { version = "0.9", features = ["rt", "stm32f427", "usb_fs"] }
# usb-device = "0.2"
# usbd-serial = "0.1"
# eeprom24x = "0.3"
serde = { version = "1.0", features = ["derive"], default-features = false }
# serde-json-core = "0.4"
heapless = "0.7"
miniconf = "0.1.0"
cortex-m-rtic = "0.5.6"
rtt-target = { version = "0.3", features = ["cortex-m"] }

# rtt-target bump
[dependencies.rtt-logger]
git = "https://github.com/quartiq/rtt-logger.git"
rev = "70b0eb5"

[dependencies.smoltcp-nal]
git = "https://github.com/quartiq/smoltcp-nal.git"
rev = "5baf55f"

[patch.crates-io.miniconf]
git = "https://github.com/quartiq/miniconf.git"
rev = "9c826f8"

[dependencies.minimq]
git = "https://github.com/quartiq/minimq.git"
rev = "93813e3"

[dependencies.stm32-eth]
git = "https://github.com/quartiq/stm32-eth.git"
rev = "4ff2014"
# path = "../stm32-eth"
features = ["stm32f427", "smoltcp-phy"]

[dependencies.smoltcp]
# version = "0.8"
git = "https://github.com/smoltcp-rs/smoltcp.git"
rev = "1134eb2"
default-features = false
features = ["proto-ipv4", "socket-tcp", "log"]

# [features]
# semihosting = ["panic-semihosting", "cortex-m-log/semihosting"]

[profile.release]
codegen-units = 1
incremental = false
debug = true
opt-level = "s"
lto = true
