[package]
categories = ["embedded", "no-std"]
name = "mqtt-thermostat"
description = "Test project for ai-thermostat components"
license = "GPL-3.0-only"
authors = ["SingularitySurfer"]
version = "0.0.0"
keywords = ["thermostat", "laser", "physics"]
repository = "https://git.m-labs.hk/M-Labs/thermostat"
edition = "2018"

[package.metadata.docs.rs]
features = []
default-target = "thumbv7em-none-eabihf"

[dependencies]
panic-halt = "0.2"
# panic-semihosting = { version = "0.5", optional = true }
log = { version = "0.4", features = ["max_level_trace", "release_max_level_info"] }
bare-metal = "1"
cortex-m = "0.7"
cortex-m-rt = { version = "0.6", features = ["device"] }
cortex-m-log = { version = "0.6", features = ["log-integration"] }
# stm32f4xx-hal = { version = "0.8.3", features = ["rt", "stm32f427"] }
# stm32-eth = { version = "0.2", features = ["stm32f427", "smoltcp-phy"], git = "https://github.com/stm32-rs/stm32-eth.git" }
# smoltcp = { version = "0.6.0", default-features = false, features = ["proto-ipv4", "socket-tcp", "log"] }
# bit_field = "0.10"
# byteorder = { version = "1", default-features = false }
# nom = { version = "5", default-features = false }
# num-traits = { version = "0.2", default-features = false, features = ["libm"] }
# usb-device = "0.2"
# usbd-serial = "0.1"
# nb = "1"
# uom = { version = "0.30", default-features = false, features = ["autoconvert", "si", "f64", "use_serde"] }
# eeprom24x = "0.3"
# serde = { version = "1.0", default-features = false, features = ["derive"] }
heapless = { version = "0.7", features = ["serde"] }
# serde-json-core = "0.1"
# sfkv = "0.1"
serde = { version = "1.0", features = ["derive"], default-features = false }
shared-bus = {version = "0.2.2", features = ["cortex-m"] }
serde-json-core = "0.4"
mcp23017 = "1.0"
mutex-trait = "0.2"
byteorder = { version = "1", default-features = false }
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
idsp = { version = "0.1.0" }

cortex-m-rtic = "0.5.7"
rtt-target = { version = "0.3", features = ["cortex-m"] }
stm32-eth = { path = "../stm32-eth", features = ["smoltcp-phy", "stm32f427"] }
# stm32-eth = { version = "0.2.0", features = ["stm32f427"] }

# rtt-target bump
[dependencies.rtt-logger]
git = "https://github.com/quartiq/rtt-logger.git"
rev = "70b0eb5"

[dependencies.smoltcp-nal]
git = "https://github.com/quartiq/smoltcp-nal.git"
rev = "5baf55f"

[dependencies.miniconf]
miniconf = { version = "0.1", optional = false }

[dependencies.minimq]
git = "https://github.com/quartiq/minimq.git"
rev = "93813e3"

[patch.crates-io.smoltcp]
git = "https://github.com/smoltcp-rs/smoltcp"
# branch = "master"
rev = "1134eb"

# [patch.crates-io.stm32f4xx-hal]
# git = "https://github.com/astro/stm32f4xx-hal.git"
# branch = "flash"


# [features]
# semihosting = ["panic-semihosting", "cortex-m-log/semihosting"]

[profile.release]
codegen-units = 1
incremental = false
debug = true
opt-level = "s"
lto = true
