[package]
categories = ["embedded", "no-std"]
name = "thermostat-mqtt"
description = "Thermostat MQTT"
license = "GPL-3.0-only"
authors = ["SingularitySurfer, "]
version = "0.0.0"
keywords = ["thermostat", "laser", "physics"]
repository = "https://git.m-labs.hk/M-Labs/thermostat"
edition = "2018"

[package.metadata.docs.rs]
features = []
default-target = "thumbv7em-none-eabihf"

[dependencies]
panic-halt = "0.2"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_info"] }
bare-metal = "1"
cortex-m = "0.7"
cortex-m-rt = { version = "0.6", features = ["device"] }
cortex-m-log = { version = "0.6", features = ["log-integration"] }
heapless = { version = "0.7", features = ["serde"] }
serde = { version = "1.0", features = ["derive"], default-features = false }
shared-bus = {version = "0.2.2", features = ["cortex-m"] }
serde-json-core = "0.4"
mcp23017 = "1.0"
mutex-trait = "0.2"
byteorder = { version = "1", default-features = false }
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
miniconf = { version = "0.1", optional = false }
cortex-m-rtic = "0.5.7"
rtt-target = { version = "0.3", features = ["cortex-m"] }
stm32-eth = { git = "https://github.com/quartiq/stm32-eth.git", branch = "thermostat_deps", features = ["smoltcp-phy", "stm32f427"]}
# stm32-eth = { version = "0.2.0", features = ["smoltcp-phy", "stm32f427"] }
stm32f4xx-hal = {version = "0.8.3", features= ["rt"], optional = true}

# rtt-target bump
[dependencies.rtt-logger]
git = "https://github.com/quartiq/rtt-logger.git"
rev = "70b0eb5"

[dependencies.smoltcp-nal]
git = "https://github.com/quartiq/smoltcp-nal.git"
rev = "5baf55f"

[dependencies.minimq]
git = "https://github.com/quartiq/minimq.git"
rev = "93813e3"

[dependencies.idsp]
git = "https://github.com/quartiq/idsp.git"
rev = "6ed2bb8"

[profile.release]
codegen-units = 1
incremental = false
debug = true
opt-level = "s"
lto = true
